fixes code smells